--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,10 +29,10 @@ import myPortrait from "../assets/portrait.jpg";
 						<Image src={myPortrait} alt="portrait" width="88" height="88" class="portrait">
 					</div>
 					<p>
-						我是 <strong style="font-size:1.2em">陈熙</strong>， 一名设计师和创意开发者，专注于网页视觉的技术实现，以及探索视觉上的奇思妙想。
+						我是 <strong style="font-size:1.2em">Wynn</strong>， 一名视觉设计师，专注于平面广告、品牌设计，以及探索视觉上的奇思妙想。
 					</p>
 					<p>
-						目前我在积极的创作一些作品，做有趣和创意性的东西，这时候，我觉得工作中最快乐。
+						目前我在积极地创作各类作品，做有趣且富有创意的东西，这也是我在工作中最快乐的时刻。
 					</p>
 
 				</div>
@@ -47,7 +47,7 @@ import myPortrait from "../assets/portrait.jpg";
 					<p style="margin-top:24px;">
 						<CallToAction
 						target="_self"
-						href="mailto:hello@uiineed.com"
+						href="mailto:weixingxian22@foxmail.com"
 						>
 							联系我
 						</CallToAction>
