--- a/src/components/SectionHeader.astro
+++ b/src/components/SectionHeader.astro
@@ -1,5 +1,5 @@
 ---
-import Social from "../components/Social.astro";
+// import Social from "../components/Social.astro";
 interface Props {
 	tag?: string;
 	description?: string;
