Fix syntax error in Social component

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,13 +1,16 @@
 ---
-import { socialLinks } from  '../data/content.ts';
+import { socialLinks } from '../data/content.ts';
 ---
+
 <div class="author border-bottom">
     <div class="social">
-      {socialLinks.map((link; any) => (
-        <a href={link.url} target="_blank" class="social-link">
-          <Fragment set:html={link.icon} />
-        </a>
-      ))}
+        {
+            socialLinks && socialLinks.map((link: any) => (
+                <a href={link.url} target="_blank" class="social-link">
+                    <Fragment set:html={link.icon} />
+                </a>
+            ))
+        }
     </div>
 </div>
 <style is:global>
